--- a/estilos/version-mobile.css
+++ b/estilos/version-mobile.css
@@ -16,6 +16,7 @@
     transform: rotate(360deg);
   } 
   font-family: 'Alata', sans-serif;
+  transform: scale(1.5);
   */
 *{
     margin: 0;
@@ -50,7 +51,6 @@ header{
 
 .header__nav-bar .header__btn-menu i{
   color: white;
-  
 }
 .header__icon-active{
     background-color: black;
@@ -58,7 +58,6 @@ header{
     width: 100vw;
     padding: 5rem 4rem;
     display: none;
-    
 }
 
 .header__icon-active .header__icon-close{
@@ -139,7 +138,7 @@ main{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 4rem;
+  margin-top: 5rem;
   
 }
 
@@ -159,7 +158,7 @@ main{
 .creations__imagens{
   width: 100%;
   height: 15.5rem;
-  border: 2px solid green;
+  
   position: relative;
 
 }
@@ -248,4 +247,40 @@ main{
   text-transform: uppercase;
   letter-spacing: 0.5rem;
   font-weight: bold;
+}
+
+/* ------------------------- */
+
+footer{
+  background-color: black;
+  padding: 5rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  
+}
+
+.footer__list ul li{
+  margin: 2rem 0rem;
+  
+}
+.footer__list ul li a{
+  text-decoration: none;
+  color: white;
+  font-size: 1.5rem;
+  font-family: 'Alata', sans-serif;
+}
+
+.footer__social-media{
+  margin: 2.4rem 0rem 2rem 0rem;
+  display: flex;
+  gap: 2rem;
+}
+
+.footer__text {
+  color: #ABABAB;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 300;
+  font-size: 1.5rem;
 }
