--- a/estilos/version-mobile.css
+++ b/estilos/version-mobile.css
@@ -81,7 +81,7 @@ header{
     font-size: 2.5rem;
     text-transform: uppercase;
     line-height: 3rem;
-    margin-bottom: 2rem;
+    margin-bottom: 2rem; 
 }
 
 .header__title{
@@ -248,7 +248,10 @@ main{
   letter-spacing: 0.5rem;
   font-weight: bold;
 }
-
+.creations__button button:hover{
+  background-color: black;
+  color: white;
+}
 /* ------------------------- */
 
 footer{
@@ -263,6 +266,7 @@ footer{
 
 .footer__list ul li{
   margin: 2rem 0rem;
+  text-align: center;
   
 }
 .footer__list ul li a{
@@ -270,6 +274,7 @@ footer{
   color: white;
   font-size: 1.5rem;
   font-family: 'Alata', sans-serif;
+  
 }
 
 .footer__social-media{
