--- a/estilos/version-mobile.css
+++ b/estilos/version-mobile.css
@@ -48,6 +48,9 @@ header{
   background-color: transparent;
   border: none;
 }
+.header__btn-menu #menu-icon{
+  cursor: pointer;
+}
 
 .header__nav-bar .header__btn-menu i{
   color: white;
@@ -69,8 +72,12 @@ header{
 .header__icon-close{
   color: white;
 }
+.header__icon-close #icon-close{
+  cursor: pointer;
+}
 .menu-list ul li{
   margin-bottom: 2rem;
+  cursor: pointer;
 }
 
 .menu-list ul li a{
@@ -158,7 +165,7 @@ main{
 .creations__imagens{
   width: 100%;
   height: 15.5rem;
-  
+  cursor: pointer;
   position: relative;
 
 }
@@ -247,6 +254,7 @@ main{
   text-transform: uppercase;
   letter-spacing: 0.5rem;
   font-weight: bold;
+  cursor: pointer;
 }
 .creations__button button:hover{
   background-color: black;
@@ -267,7 +275,7 @@ footer{
 .footer__list ul li{
   margin: 2rem 0rem;
   text-align: center;
-  
+  cursor: pointer;
 }
 .footer__list ul li a{
   text-decoration: none;
@@ -281,6 +289,7 @@ footer{
   margin: 2.4rem 0rem 2rem 0rem;
   display: flex;
   gap: 2rem;
+  cursor: pointer;
 }
 
 .footer__text {
