--- a/estilos/version-mobile.css
+++ b/estilos/version-mobile.css
@@ -31,7 +31,7 @@ html{
 }
 header{
   background-image: url(../images/img-mobile/image-hero.jpg);
-  height: 100vh;
+  height: 70vh;
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -43,6 +43,9 @@ header{
   justify-content: space-around;
   padding-top: 4rem;
   
+}
+.header__nav-bar-desktop{
+  display: none;
 }
 .header__btn-menu{
   background-color: transparent;
@@ -121,7 +124,9 @@ main{
 }
 
 .description__text{
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 6rem;
 }
 .description__text h2{
@@ -130,13 +135,16 @@ main{
   font-weight: 300;
   margin-bottom: 2rem;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .description__text p{
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-family: 'Alata', sans-serif;
   color: #ABABAB;
   line-height: 2.5rem;
+  max-width: 100%;
+  text-align: center;
 }
 
 /* --------------- */
@@ -154,6 +162,7 @@ main{
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 300;
   margin-bottom: 4rem;
+  text-transform: uppercase;
 }
 
 .creations__container{
